# multi-mediawiki-rag

./: .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/multi_mediawiki_rag/: __init__.py  __main__.py  loader.py  splitter.py
